--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -10,15 +10,6 @@
                 <div class="col-md-6 col-xxl-4">
                     <div class="card mb-4">
                         <div class="card-body">
-                            <div class="image-container">
-                                <div class="image-flash">
-                                    <p class="author"></p>
-                                </div>
-                            </div>
-                            <a href="#" class="post-link">
-                                <h2 class="card-title"></h2>
-                            </a>
-                            <h2>{{ home.title }}</h2>
                             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                                 <div class="carousel-indicators">
                                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
@@ -93,20 +84,10 @@
                         </div>
                     </div>
                 </div>
-
-            </div>
-            <div class="row">
-
-
-
             </div>
         </div>
     </div>
-
-    <nav aria-label="Page navigation">
-
-    </nav>
-
+    <div class="spacer"></div>
 </div>
 
 <!-- index.html content ends here -->
