--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -4,7 +4,11 @@
 
 <!-- index.html content starts here -->
 <div class="container-fluid">
-    
+    <div class="row">
+        <div class="col-12 mt-3 left">
+            <div class="row">
+                <div class="col-md-6 col-xxl-4">
+                    <div class="card mb-4">
                         <div class="card-body">
                             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                                 <div class="carousel-indicators">
@@ -60,7 +64,6 @@
                                     <span class="visually-hidden">Next</span>
                                 </button>
                             </div>
-
                             <p class="card-text h6 border border-dark border-3 opacity">The Fancy Cinema Castle is
                                 different from other cinemas.<br>
                                 Here you will book a whole auditorium for 2 to 20 people, where you can
@@ -78,6 +81,11 @@
                                 form, we will choose for you.
                             </p>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="spacer"></div>
 </div>
 
