Fixed my footer too increase my ligthouse score

--- a/templates/base.html
+++ b/templates/base.html
@@ -110,20 +110,20 @@
     </main>
 
     <!-- Footer -->
-    <footer class="footer mt-auto py-3 bg-dark text-secondary border-top border-1 fixed-bottom">
+    <footer class="footer mt-auto py-3 bg-dark border-top border-1 fixed-bottom">
         <p class="m-0 text-center">
             {% block copyright %}
             Copyright 2024 Alexander Åberg
             {% endblock %}
         </p>
         <p class="m-0 text-center">
-            <a class='text-secondary' href="https://facebook.com/" target="_blank" rel="noopener"
+            <a class='text-secondary mx-1' href="https://facebook.com/" target="_blank" rel="noopener"
                 aria-label="Our Facebook (Opens in a new browser tab)"><i class="fa-brands fa-facebook"></i></a>
-            <a class='text-secondary' href="https://instagram.com/" target="_blank" rel="noopener"
+            <a class='text-secondary mx-1' href="https://instagram.com/" target="_blank" rel="noopener"
                 aria-label="Our instagram (Opens in a new browser tab)"><i class="fa-brands fa-instagram"></i></a>
-            <a class='text-secondary' href="https://youtube.com/" target="_blank" rel="noopener"
+            <a class='text-secondary mx-1' href="https://youtube.com/" target="_blank" rel="noopener"
                 aria-label="Our YouTube (Opens in a new browser tab)"><i class="fa-brands fa-youtube"></i></a>
-            <a class='text-secondary' href="https://x.com/" target="_blank" rel="noopener"
+            <a class='text-secondary mx-1' href="https://x.com/" target="_blank" rel="noopener"
                 aria-label="Our X (Opens in a new browser tab)"><i class="fa-brands fa-x-twitter"></i></a>
         </p>
     </footer>
