Changed so I have opacity and same buttons as on About on Home

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -26,7 +26,7 @@
                                         <img src="https://res.cloudinary.com/dpfuyoali/image/upload/bxe9zwphve7bhbthbmd3"
                                             class="d-block w-100" alt="Action Movies">
                                         <div class="carousel-caption d-none d-md-block">
-                                            <h2 class='opacity'>Action Movies<br><a href='/bookings/'>Booking</a>
+                                            <h2 class='opacity'>Action Movies<br><a href="/bookings/" class="btn btn-primary">Booking</a>
                                             </h2>
                                         </div>
                                     </div>
@@ -34,7 +34,7 @@
                                         <img src="https://res.cloudinary.com/dpfuyoali/image/upload/qnoheuaaeqkdcil39tg6"
                                             class="d-block w-100" alt="Comedy Movies">
                                         <div class="carousel-caption d-none d-md-block">
-                                            <h2 class='opacity'>Comedy Movies<br><a href='/bookings/'>Booking</a>
+                                            <h2 class='opacity'>Comedy Movies<br><a href="/bookings/" class="btn btn-primary">Booking</a>
                                             </h2>
                                         </div>
                                     </div>
@@ -42,14 +42,14 @@
                                         <img src="https://res.cloudinary.com/dpfuyoali/image/upload/ru5blqivecelik64s3lv"
                                             class="d-block w-100" alt="Drama Movies">
                                         <div class="carousel-caption d-none d-md-block">
-                                            <h2 class='opacity'>Drama Movies<br><a href='/bookings/'>Booking</a>
+                                            <h2 class='opacity'>Drama Movies<br><a href="/bookings/" class="btn btn-primary">Booking</a>
                                         </div>
                                     </div>
                                     <div class="carousel-item">
                                         <img src="https://res.cloudinary.com/dpfuyoali/image/upload/b4qhuuzy1tj0nh094i7f"
                                             class="d-block w-100" alt="Video Games">
                                         <div class="carousel-caption d-none d-md-block">
-                                            <h2 class='opacity'>Video Games<br><a href='/bookings/'>Booking</a>
+                                            <h2 class='opacity'>Video Games<br><a href="/bookings/" class="btn btn-primary">Booking</a>
                                         </div>
                                     </div>
                                 </div>
