Added Meta info and Meta tags

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,8 +11,13 @@
 <html class="h-100" lang="en">
 
 <head>
-    <title>The Fancy Cinema Castle</title>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Tags and information for search engines -->
+    <meta name="description"
+    content="The Fancy Cinema Castle, book an exklusive cinema experience in a top of the line auditorium experience">
+    <meta name="keywords" content="the fancy cinema castle, cinema, auditorium, fun with friends, fun with family, craft beer, video games, movies, bachelor, bachelorette, birthday, company event, luxury">
+    <title>The Fancy Cinema Castle</title>
 
     <!-- Google Fonts CSS -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
