Fixed the error on Comedy Movies

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -34,7 +34,7 @@
                                         <img src="https://res.cloudinary.com/dpfuyoali/image/upload/qnoheuaaeqkdcil39tg6"
                                             class="d-block w-100" alt="Comedy Movies">
                                         <div class="carousel-caption d-none d-md-block">
-                                            <h2 class='opacity'>Comedy Movies<br<a href='/bookings/'>Booking</a>
+                                            <h2 class='opacity'>Comedy Movies<br><a href='/bookings/'>Booking</a>
                                             </h2>
                                         </div>
                                     </div>
