Added info about 2 bookings max

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -65,7 +65,7 @@
                                 </button>
                             </div>
                             <p class="card-text h6 border border-dark border-3 opacity">The Fancy Cinema Castle is
-                                different from other cinemas.<br>
+                                different from other cinemas, you can have maximum 2 bookings on your account.<br>
                                 Here you will book a whole auditorium for 2 to 20 people, where you can
                                 watch movies or
                                 play games for 5 hours a session.<br>
@@ -77,8 +77,7 @@
                                 selection of
                                 soda and we brew our own beer.<br>
                                 If you don't add any information about movies or games in your wishes in the
-                                booking
-                                form, we will choose for you.
+                                booking manager we will choose for you.
                             </p>
                         </div>
                     </div>
