Trying to make info , 404

--- a/templates/404.html
+++ b/templates/404.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block content %}
-<div class="d-flex vh-100 justify-content-center align-items-center">
+<div class="d-flex vh-100 justify-content-center align-items-center log-register">
     <div class="text-center p-4 shadow-lg rounded">
         <h1>Error 404: Not Found</h1>
         <p>The page you are looking for might have been removed, had its name changed, is temporarily unavailable, or did never exist.<br>
