--- a/templates/404.html
+++ b/templates/404.html
@@ -9,7 +9,7 @@
         <p>The page you are looking for might have been removed, had its name changed, is temporarily unavailable, or did never exist.<br>
             Check the spelling in the browser!
         </p>
-        <a href="{% url 'home' %}" class="btn btn-sm mt-2" id="custom-error-btn">Return to Home</a>
+        <a href="{% url 'home' %}" class="btn btn-sm mt-2 bg-light faded" id="custom-error-btn">Return to Home</a>
     </div>
 </div>
 {% endblock %}
