--- a/templates/404.html
+++ b/templates/404.html
@@ -3,11 +3,11 @@
 {% load static %}
 
 {% block content %}
-<div class="d-flex vh-100 justify-content-center align-items-center log-register start-30 top-15 position-relative">
+<div class="d-flex vh-150 justify-content-center align-items-center log-register position-relative">
     <div class="text-center p-4 shadow-lg rounded">
         <h1>Error 404: Not Found</h1>
         <p>The page you are looking for might have been removed, had its name changed, is temporarily unavailable, or did never exist.<br>
-            Check the spelling in the browser!
+            Check the spelling in the browser or click the button!
         </p>
         <a href="{% url 'home' %}" class="btn btn-sm mt-2 btn-edit" id="custom-error-btn">Return to Home</a>
     </div>
