--- a/templates/403.html
+++ b/templates/403.html
@@ -3,12 +3,12 @@
 {% load static %}
 
 {% block content %}
-<div class="d-flex vh-100 justify-content-center align-items-center">
+<div class="d-flex vh-150 justify-content-center align-items-center log-register position-relative">
     <div class="text-center p-4 shadow-lg rounded">
         <h1>Error 403: Forbidden</h1>
         <p>You do not have the necessary permissions to access this resource. Please ensure you are logged in with the
-            appropriate credentials.</p>
-        <a href="{% url redirect_url %}" class="btn btn-sm mt-2" id="custom-error-btn">Return to Home</a>
+            correct credentials.</p>
+            <a href="{% url 'home' %}" class="btn btn-sm mt-2 btn-edit" id="custom-error-btn">Return to Home</a>
     </div>
 </div>
 {% endblock %}
