--- a/templates/500.html
+++ b/templates/500.html
@@ -3,10 +3,11 @@
 {% load static %}
 
 {% block content %}
-<div class="d-flex vh-100 justify-content-center align-items-center">
+<div class="d-flex vh-150 justify-content-center align-items-center log-register position-relative">
     <div class="text-center p-4 shadow-lg rounded">
         <h1>Error 500: Internal Server Error</h1>
-        <p>Something went wrong on our end. Please try again later or contact support if the problem persists.</p>
-        <a href="{% url redirect_url %}" class="btn btn-sm mt-2" id="custom-error-btn">Return to Home</a>
+        <p>Something went wrong on our end. Please try again later or contact the site owner if the problem persists.</p>
+        <a href="{% url 'home' %}" class="btn btn-sm mt-2 btn-edit" id="custom-error-btn">Return to Home</a>
     </div>
-    {% endblock %}
+</div>
+{% endblock %}
