Fixed base according to validator

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <!-- Tags and information for search engines -->
     <meta name="description"
     content="The Fancy Cinema Castle, book an exklusive cinema experience in a top of the line auditorium experience">
@@ -106,7 +106,7 @@
         {% endif %}
         <h1 id='h1'>Welcome to The Fancy Cinema Castle</h1>
         <img id='cinema-castle' loading="lazy"
-            src="https://res.cloudinary.com/dpfuyoali/image/upload/The Fancy Cinema Castle/xsavj5bsme6swc90sj4q.jpg"
+            src="https://res.cloudinary.com/dpfuyoali/image/upload/lfthokbukpsubdzmlelv.jpg"
             alt="Cinema Castle">
         {% block content %}
         <!-- Content Goes here -->
