Removed a / in base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Tags and information for search engines -->
     <meta name="description"
     content="The Fancy Cinema Castle, book an exklusive cinema experience in a top of the line auditorium experience">
