--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -9,7 +9,6 @@
   <div class="row">
     <div class="col-md-8 mt-3 offset-md-2">
       <h3>{% trans "Sign Up" %}</h3>
-
       <p>{% blocktrans %}
         Welcome back to the The Fancy Cinema Castle.
         Do you already have an account? Then please
@@ -24,7 +23,7 @@
         {% csrf_token %}
         {{ form.as_p }}
         {% if redirect_field_value %}
-        <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+        <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}">
         {% endif %}
         <button class="btn btn-signup right" type="submit">
           {% trans "Sign Up" %} &raquo;</button>
@@ -32,5 +31,4 @@
     </div>
   </div>
 </div>
-
 {% endblock %}
